fixed spacing and styling on my team page

--- a/Assets/CSS/my-team.css
+++ b/Assets/CSS/my-team.css
@@ -6,3 +6,13 @@ img {
 .remove-hero {
   /* width: 50px !important; */
 }
+
+.add-hero {
+  height: 20vh;
+}
+
+.team p{
+  font-size: 30px;
+  padding-top: 20px;
+  margin-bottom: 0px;
+}
