--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -38,9 +38,16 @@ main {
   justify-content: center !important;
 }
 
+
 #copyrights a, #copyrights p {
   color: white; 
   font-size: calc(5px + .5vw);
+  line-height: 3px;
+  padding-top: 10px;
+}
+
+#copyrights a{
+  padding-right: 20px;
 }
 
 #dropdownSearch {
